objects/PC_Interaction__c.object
<CustomObject>
    <description>Patient Connect custom object used to manage information and activities for interactions with / for patients such as infusion appointments, training sessions or another types of patient appointments typically delivered by 3rd parties.</description>
    <fields>
        <fullName>ACLS_Meeting_Link__c</fullName>
        <description>Meeting URL will be auto-populate from Care coordinator of program case when the type is Injection Training</description>
        <label>Meeting Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ACLS_Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PC_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Interaction</fullName>
                </value>
                <value>
                    <fullName>Subsequent Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Duration_Hrs__c</fullName>
        <description>The duration of the interaction or appointment.</description>
        <formula>(floor(( PC_End__c  -  PC_Start__c)*24))
+
(((((PC_End__c -  PC_Start__c)*24)-floor((PC_End__c -  PC_Start__c)*24))*60)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_End__c</fullName>
        <description>The End date and time of the scheduled or requested interaction or appointment.</description>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Notes__c</fullName>
        <description>Captures the Interaction Summary</description>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Participant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The pharmacy, clinic, or other type of participant (account) for which the patient requests an appointment.</description>
        <label>Location</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pharmacy,HCO, Field Training Nurse</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Participants__c</fullName>
        <description>Roles of the participants in the Interaction</description>
        <label>Participants</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HCO</fullName>
                </value>
                <value>
                    <fullName>Treating Physician</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Specialist</fullName>
                </value>
                <value>
                    <fullName>Field Reimbursement Manager</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Patient_Program__c</fullName>
        <description>The Program case to which the interaction is related.</description>
        <label>Program</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PC_Patient__c</fullName>
        <description>The name of the patient the interaction is related to.</description>
        <formula>IF(ISBLANK(PC_Patient_Program__r.AccountId),&quot;  &quot;,(HYPERLINK(&quot;/lightning/r/Account/&quot;+PC_Patient_Program__r.AccountId+&quot;/view&quot;, PC_Patient_Program__r.Account.PC_Last_Name__c + &apos;, &apos; + PC_Patient_Program__r.Account.PC_First_Name__c ,&quot;_blank&quot;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Start__c</fullName>
        <description>The Start date and time of the scheduled or requested interaction or appointment.</description>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Status__c</fullName>
        <description>The status of the Interaction such as Requested or Confirmed.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <description>The type of the interaction scheduled.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Infusion Appointment</fullName>
                </value>
                <value>
                    <fullName>Test - Baseline</fullName>
                </value>
                <value>
                    <fullName>Training - Live In-Person</fullName>
                </value>
                <value>
                    <fullName>Training - Live Virtual</fullName>
                </value>
                <value>
                    <fullName>Injection Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>PC_Participant__c</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Patient_Program__c</columns>
        <columns>PC_Status__c</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Start__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Appointments</fullName>
        <columns>NAME</columns>
        <columns>PC_Type__c</columns>
        <columns>PC_Patient_Program__c</columns>
        <columns>PC_Patient__c</columns>
        <columns>PC_Participant__c</columns>
        <columns>PC_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Patient__c</field>
            <operation>contains</operation>
            <value>Driver,Donna</value>
        </filters>
        <label>My Appointments</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{0000000}</displayFormat>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Participant_Acc_Record_Type_Validation</fullName>
        <active>true</active>
        <description>Participant record type must be in Pharmacy, HCO, or Field Training Nurse</description>
        <errorConditionFormula>IF(OR(ISBLANK(PC_Participant__c),ISNULL(PC_Participant__c)), FALSE, AND((PC_Participant__r.RecordType.DeveloperName!= &apos;PC_Pharmacy&apos;),(PC_Participant__r.RecordType.DeveloperName !=&apos;HCO&apos;),(PC_Participant__r.RecordType.DeveloperName !=&apos;PC_Field_Training_Nurse&apos;)))</errorConditionFormula>
        <errorDisplayField>PC_Participant__c</errorDisplayField>
        <errorMessage>Account selected must be of the Record Type Pharmacy, HCO or Field Training Nurse</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Case_Record_Type_Validation</fullName>
        <active>true</active>
        <description>Case record type must be Program</description>
        <errorConditionFormula>!ISPICKVAL(PC_Patient_Program__r.Type,&apos;Program&apos;)</errorConditionFormula>
        <errorDisplayField>PC_Patient_Program__c</errorDisplayField>
        <errorMessage>Case selected must be of the Record Type Program</errorMessage>
    </validationRules>
</CustomObject>